--- a/recipe.html
+++ b/recipe.html
@@ -93,6 +93,20 @@
       </div>
     </nav>
 
+    <div>
+      <section class="image-container"> <img src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg" alt="placeholder"></section>
+      <section class="heading"><h1>Recipes</h1></section>
+      <section class="titles"><h3>Ingredients</h3>
+      <h3>Methods</h3></section>
+      <section class="text-container"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit odio repellendus deleniti ut temporibus harum ab, aliquam minus rerum eligendi praesentium maxime error nihil, in, velit eum ex eius?</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, recusandae incidunt dicta nam, similique, eligendi quo possimus quisquam iusto explicabo perspiciatis commodi. Pariatur quas ut eaque. Assumenda molestias quis eos!</p></section>
+
+
+
+
+
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
