"basic html, img folder, placeholder image"#

--- a/index.html
+++ b/index.html
@@ -95,6 +95,58 @@
     </nav>
     <!--Diego Section-->
 
+    <main>
+      <h1>Cuisine a la Group 1</h1>
+
+      <div class="grid">
+        <div class="row">
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Recipe Name</h2>
+          </div>
+
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Recipe Name</h2>
+          </div>
+
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Recipe Name</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Recipe Name</h2>
+          </div>
+
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Recipe Name</h2>
+          </div>
+
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Recipe Name</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Drink Name</h2>
+          </div>
+
+          <div class="recipe-container">
+            <img src="./img/placeholder-1.jpg" alt="food" />
+            <h2>Drink Name</h2>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
