--- a/index.html
+++ b/index.html
@@ -98,50 +98,66 @@
     <main>
       <h1>Cuisine a la Group 1</h1>
 
-      <div class="grid">
+      <div class="grid container-fluid">
         <div class="row">
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Recipe Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="food" />
+              <h2>Recipe Name</h2>
+            </a>
           </div>
 
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Recipe Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="food" />
+              <h2>Recipe Name</h2>
+            </a>
           </div>
 
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Recipe Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="food" />
+              <h2>Recipe Name</h2>
+            </a>
           </div>
         </div>
 
         <div class="row">
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Recipe Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="food" />
+              <h2>Recipe Name</h2>
+            </a>
           </div>
 
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Recipe Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="food" />
+              <h2>Recipe Name</h2>
+            </a>
           </div>
 
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Recipe Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="food" />
+              <h2>Recipe Name</h2>
+            </a>
           </div>
         </div>
 
         <div class="row">
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Drink Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="drink" />
+              <h2>Drink Name</h2>
+            </a>
           </div>
 
           <div class="recipe-container">
-            <img src="./img/placeholder-1.jpg" alt="food" />
-            <h2>Drink Name</h2>
+            <a href="#">
+              <img src="./img/placeholder-1.jpg" alt="drink" />
+              <h2>Drink Name</h2>
+            </a>
           </div>
         </div>
       </div>
