change drinks.html add structure

--- a/drinks.html
+++ b/drinks.html
@@ -105,3 +105,53 @@
     ></script>
   </body>
 </html>
+
+<div class="main-content">
+
+  <div class="column_left">
+
+    <div class="img_left">
+    </div>
+    <h2 class="drink_name_left">
+    </h2>
+    <h3 class="Ingrediants_left">
+    </h3>
+    <div class="ingrediants_left">
+      <p>
+        Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
+      </p>
+    </div>
+    <h3 class="method_left">
+    </h3>
+    <div class="method_left">
+      <p>
+        Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
+      </p>
+    </div>
+
+    <div class="main-content">
+
+      <div class="column_right">
+    
+        <div class="img_right">
+        </div>
+        <h2 class="drink_name_right">
+        </h2>
+        <h3 class="Ingrediants_right">
+        </h3>
+        <div class="ingrediants_right">
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
+          </p>
+        </div>
+        <h3 class="method_right">
+        </h3>
+        <div class="method_right">
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
+          </p>
+        </div>
+      </div> 
+    </div>
+  </div>
+</div>   
