changed sections to divs

--- a/recipe.html
+++ b/recipe.html
@@ -94,17 +94,30 @@
     </nav>
 
     <div>
-      <section class="image-container"> <img src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg" alt="placeholder"></section>
-      <section class="heading"><h1>Recipes</h1></section>
-      <section class="titles"><h3>Ingredients</h3>
-      <h3>Methods</h3></section>
-      <section class="text-container"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit odio repellendus deleniti ut temporibus harum ab, aliquam minus rerum eligendi praesentium maxime error nihil, in, velit eum ex eius?</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, recusandae incidunt dicta nam, similique, eligendi quo possimus quisquam iusto explicabo perspiciatis commodi. Pariatur quas ut eaque. Assumenda molestias quis eos!</p></section>
-
-
-
-
-
+      <div class="image-container">
+        <img
+          src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg"
+          alt="placeholder"
+        />
+      </div>
+      <div class="heading"><h1>Recipes</h1></div>
+      <div class="titles">
+        <h3>Ingredients</h3>
+        <h3>Methods</h3>
+      </div>
+      <div class="text-container">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit
+          odio repellendus deleniti ut temporibus harum ab, aliquam minus rerum
+          eligendi praesentium maxime error nihil, in, velit eum ex eius?
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio,
+          recusandae incidunt dicta nam, similique, eligendi quo possimus
+          quisquam iusto explicabo perspiciatis commodi. Pariatur quas ut eaque.
+          Assumenda molestias quis eos!
+        </p>
+      </div>
     </div>
 
     <script
