changed width/margin for main

--- a/recipe.html
+++ b/recipe.html
@@ -93,7 +93,7 @@
       </div>
     </nav>
 
-    <div>
+    <main>
       <div class="image-container">
         <img
           src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg"
@@ -118,7 +118,7 @@
           Assumenda molestias quis eos!
         </p>
       </div>
-    </div>
+    </main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
