--- a/drinks.html
+++ b/drinks.html
@@ -14,8 +14,14 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav
+      id="mainNavbar"
+      class="navbar navbar-expand-lg navbar-expand-md navbar-dark"
+    >
+      <a class="navbar-brand" href="#"
+        ><img class="logo" src="./img/121054.png" alt="" />
+        <h5>La Cucina In Fiamme</h5>
+      </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -29,7 +35,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#"
               >Home <span class="sr-only">(current)</span></a
@@ -93,6 +99,49 @@
       </div>
     </nav>
 
+    /*Waldemars Section */
+    <div class="main-content">
+      <div class="column_left">
+        <div class="img_left"></div>
+        <h2 class="drink_name_left"></h2>
+        <h3 class="Ingrediants_left"></h3>
+        <div class="ingrediants_left">
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor
+            invidunt ut labore et dolore
+          </p>
+        </div>
+        <h3 class="method_left"></h3>
+        <div class="method_left">
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor
+            invidunt ut labore et dolore
+          </p>
+        </div>
+
+        <div class="main-content">
+          <div class="column_right">
+            <div class="img_right"></div>
+            <h2 class="drink_name_right"></h2>
+            <h3 class="Ingrediants_right"></h3>
+            <div class="ingrediants_right">
+              <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod
+                tempor invidunt ut labore et dolore
+              </p>
+            </div>
+            <h3 class="method_right"></h3>
+            <div class="method_right">
+              <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod
+                tempor invidunt ut labore et dolore
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -105,53 +154,3 @@
     ></script>
   </body>
 </html>
-
-<div class="main-content">
-
-  <div class="column_left">
-
-    <div class="img_left">
-    </div>
-    <h2 class="drink_name_left">
-    </h2>
-    <h3 class="Ingrediants_left">
-    </h3>
-    <div class="ingrediants_left">
-      <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
-      </p>
-    </div>
-    <h3 class="method_left">
-    </h3>
-    <div class="method_left">
-      <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
-      </p>
-    </div>
-
-    <div class="main-content">
-
-      <div class="column_right">
-    
-        <div class="img_right">
-        </div>
-        <h2 class="drink_name_right">
-        </h2>
-        <h3 class="Ingrediants_right">
-        </h3>
-        <div class="ingrediants_right">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
-          </p>
-        </div>
-        <h3 class="method_right">
-        </h3>
-        <div class="method_right">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor invidunt ut labore et dolore 
-          </p>
-        </div>
-      </div> 
-    </div>
-  </div>
-</div>   
