--- a/recipe.html
+++ b/recipe.html
@@ -14,8 +14,14 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav
+      id="mainNavbar"
+      class="navbar navbar-expand-lg navbar-expand-md navbar-dark"
+    >
+      <a class="navbar-brand" href="#"
+        ><img class="logo" src="./img/121054.png" alt="" />
+        <h5>La Cucina In Fiamme</h5>
+      </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -29,7 +35,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#"
               >Home <span class="sr-only">(current)</span></a
