--- a/recipe.html
+++ b/recipe.html
@@ -6,6 +6,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <link rel="stylesheet" href="./styles/styles.css" />
   <link rel="stylesheet" href="./styles/home.css" />
+  <link rel="stylesheet" href="/styles/recipe.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
@@ -71,7 +72,7 @@
 
       <div><img src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg"
           alt="">
-        <h3>Recipe Name</h3>
+        <h3 id="header">Recipe Name</h3>
       </div>
       <div class="row">
         <div class="col-lg-6 col-md-6">
