--- a/index.html
+++ b/index.html
@@ -106,65 +106,83 @@
 
       <div class="grid container-fluid">
         <div class="row">
-          <div class="recipe-container">
+          <div class="recipe-container col-lg-4">
             <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="food" />
+              <div class="img-container">
+                <img src="./img/placeholder-1.jpg" alt="food" />
+              </div>
               <h2>Recipe Name</h2>
             </a>
           </div>
 
-          <div class="recipe-container">
+          <div class="recipe-container col-lg-4">
             <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="food" />
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
               <h2>Recipe Name</h2>
             </a>
           </div>
 
-          <div class="recipe-container">
+          <div class="recipe-container col-lg-4">
             <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="food" />
-              <h2>Recipe Name</h2>
-            </a>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="recipe-container">
-            <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="food" />
-              <h2>Recipe Name</h2>
-            </a>
-          </div>
-
-          <div class="recipe-container">
-            <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="food" />
-              <h2>Recipe Name</h2>
-            </a>
-          </div>
-
-          <div class="recipe-container">
-            <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="food" />
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
               <h2>Recipe Name</h2>
             </a>
           </div>
         </div>
 
         <div class="row">
-          <div class="recipe-container">
+          <div class="recipe-container col-lg-4">
             <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="drink" />
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
+              <h2>Recipe Name</h2>
+            </a>
+          </div>
+
+          <div class="recipe-container col-lg-4">
+            <a href="#">
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
+              <h2>Recipe Name</h2>
+            </a>
+          </div>
+
+          <div class="recipe-container col-lg-4">
+            <a href="#">
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
+              <h2>Recipe Name</h2>
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="recipe-container col-lg-4">
+            <a href="#">
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
               <h2>Drink Name</h2>
             </a>
           </div>
 
-          <div class="recipe-container">
+          <div class="recipe-container col-lg-4">
             <a href="#">
-              <img src="./img/placeholder-1.jpg" alt="drink" />
+              <div class="img-container">
+                <img src="./img/placeholder-2.jpg" alt="food" />
+              </div>
               <h2>Drink Name</h2>
             </a>
           </div>
+
+          <div class="recipe-container col-lg-4"></div>
         </div>
       </div>
     </main>
