--- a/recipe.html
+++ b/recipe.html
@@ -103,7 +103,7 @@
 
     <main>
       <div class="container-fluid">
-        <div>
+        <div class="row align-items-center justify-content-center">
           <img
             src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg"
             alt=""
