--- a/recipe.html
+++ b/recipe.html
@@ -104,13 +104,15 @@
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img
+          <img id="pic"
             src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg"
             alt=""
-          />
+          /><div class="col-lg-10 justify-content-center row align-items-center">
+             
+          
           <h3 id="header">Recipe Name</h3>
-        </div>
-        <div class="row">
+        </div></div>
+        <div class="row align-items-center justify-content-center">
           <div class="col-lg-6 col-md-6">
             <h4>Ingredients</h4>
             <ul>
