--- a/drinks.html
+++ b/drinks.html
@@ -98,55 +98,61 @@
         </ul>
       </div>
     </nav>
+    
+    <!-- /*Waldemars Section */ -->
+  <main>
+    <div class="container-fluid">
+      <div class="column justify-content-spacebetween">
 
-    /*Waldemars Section */
-    <div class="main-content">
-      <div class="column_left">
-        <div class="img_left"></div>
-        <h2 class="drink_name_left"></h2>
-        <h3 class="Ingrediants_left"></h3>
-        <div class="ingrediants_left">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor
-            invidunt ut labore et dolore
-          </p>
-        </div>
-        <h3 class="method_left"></h3>
-        <div class="method_left">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod tempor
-            invidunt ut labore et dolore
-          </p>
-        </div>
-
-        <div class="main-content">
-          <div class="column_right">
-            <div class="img_right"></div>
-            <h2 class="drink_name_right"></h2>
-            <h3 class="Ingrediants_right"></h3>
-            <div class="ingrediants_right">
-              <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod
-                tempor invidunt ut labore et dolore
-              </p>
-            </div>
-            <h3 class="method_right"></h3>
-            <div class="method_right">
-              <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscinonumy eirmod
-                tempor invidunt ut labore et dolore
-              </p>
-            </div>
+        <div>
+          <img src="./img/caipirinha.jpg" alt="">
+          <h3 id="header">CAIPIRINHA </h3>
           </div>
+          <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <h4>Ingredients</h4>
+            <ul>
+              300 ml ginger ale
+              120 ml passion fruit juice
+              4 limes
+              8 teaspoons of cane sugar
+              Mint to garnish
+              Crushed Ice
+            </ul>
+          </div>
+          <h4>Method</h4>
+          <p>First, wash the limes and cut each in 8 pieces. Fill the cane sugar into two glasses, add the limes and crush them. Now add the passion fruit juice and stir well. Finally, add the crushed ice and the ginger ale and garnish your mocktail with some mint! If you want to enjoy your Ipanema on the go or just want to prepare it beforehand, simply fill it into the TWEE vacuum bottle – it will keep it ice cold for hours!</p>
         </div>
+
+        <div>
+          <img src="./img/ipanema.jpg" alt="">
+          <h3 id="header">IPANEMA</h3>
+          </div>
+          <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <h4>Ingredients</h4>
+            <ul>
+              120 ml passion fruit juice
+              4 limes
+              8 teaspoons of cane sugar
+              Mint to garnish
+              Crushed Ice
+            </ul>
+          </div>
+          <h4>Method</h4>
+          <p>Lorem iosum</p>
+        </div>
+          
       </div>
     </div>
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+  </main>
+  
+  
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"
+  ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
