--- a/recipe.html
+++ b/recipe.html
@@ -16,102 +16,102 @@
   </head>
 
   <body>
-    <nav
-      id="mainNavbar"
-      class="navbar navbar-expand-lg navbar-expand-md navbar-dark"
-    >
-      <a class="navbar-brand" href="#"
-        ><img class="logo" src="./img/121054.png" alt="" />
-        <h5>La Cucina In Fiamme</h5>
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <div id="mainNavbar">
+      <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark">
+        <a class="navbar-brand" href="#"
+          ><img class="logo" src="./img/121054.png" alt="" />
+        </a>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Starters
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Starter1</a>
-              <a class="dropdown-item" href="#">Starter2</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Mains
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Main1</a>
-              <a class="dropdown-item" href="#">Main2</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Desserts
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Dessert1</a>
-              <a class="dropdown-item" href="#">Dessert2</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Drinks</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Starters
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Starter1</a>
+                <a class="dropdown-item" href="#">Starter2</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Mains
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Main1</a>
+                <a class="dropdown-item" href="#">Main2</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Desserts
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Dessert1</a>
+                <a class="dropdown-item" href="#">Dessert2</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Drinks</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 
     <main>
       <div class="container-fluid">
         <div class="row align-items-center justify-content-center">
-          <img id="pic"
+          <img
+            id="pic"
             src="https://image.shutterstock.com/image-photo/grass-flowers-during-sunset-shadow-260nw-1267603696.jpg"
             alt=""
-          /><div class="col-lg-10 justify-content-center row align-items-center">
-             
-          
-          <h3 id="header">Recipe Name</h3>
-        </div></div>
+          />
+          <div class="col-lg-10 justify-content-center row align-items-center">
+            <h3 id="header">Recipe Name</h3>
+          </div>
+        </div>
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-6 col-md-6">
             <h4>Ingredients</h4>
