--- a/recipe.html
+++ b/recipe.html
@@ -115,6 +115,7 @@
 
         <div class="row align-items-start justify-content-center">
           <div class="col-lg-6 col-md-6">
+            <section class="bordered">
             <h4>Ingredients</h4>
             <br /><br />
             <li>1 tablespoon olive oil</li>
@@ -153,9 +154,10 @@
             <br />
             <li>2 tablespoons freshly grated Parmigiano-Reggiano cheese</li>
             <br />
+            </section>
           </div>
           <div class="col-lg-6 col-md-6">
-            <h4>Method</h4>
+           <section class="method"> <h4>Method</h4>
             <br /><br />
             <p>
               <b>Step 1</b> <br /><br />
@@ -194,7 +196,7 @@
               Add rigatoni to the sauce and cook until heated through. Serve
               topped with a pinch of marjoram and freshly grated
               Parmigiano-Reggiano cheese.
-            </p>
+            </p></section>
           </div>
         </div>
       </div>
