--- a/rigatonigenovese.html
+++ b/rigatonigenovese.html
@@ -105,7 +105,7 @@
         <div class="row align-items-center justify-content-center">
           <img
             id="pic"
-            src="http://images.media-allrecipes.com/userphotos/560x315/3489951.jpg"
+            src="./img/rigatoni.jpg"
             alt=""
           />
           <div class="col-lg-10 justify-content-center row align-items-center">
